@@ -55,6 +55,7 @@ gretty {
 
     // automatically start up the container before the following task, and shut it down afterwards
     integrationTestTask = 'integrationLocalWithContainer'
+    jvmArgs '-XX:MaxPermSize=1024m', '-Xmx2048m'
 }
 
 //Integration test suite
@@ -136,7 +137,6 @@ dependencies {
             "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jacksonVersion",
             "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:$jacksonVersion",
             "com.fasterxml.jackson.module:jackson-module-scala_2.10:$jacksonVersion",
-
             //Swagger for API documentation, & dependent JARs
             "com.wordnik:swagger-core_2.10:1.3.2",
             "com.wordnik:swagger-annotations:1.3.2",
@@ -148,7 +148,7 @@ dependencies {
             "org.hibernate:hibernate-validator:5.1.0.Final",
             "org.hibernate:hibernate-validator-annotation-processor:5.1.0.Final",
             "org.hibernate:hibernate-validator-cdi:5.1.0.Final"
-
+       
     testCompile "org.testng:testng:6.8.8",
             "org.apache.httpcomponents:httpclient:$apacheHttpVersion",
             "org.apache.httpcomponents:httpcore:$apacheHttpVersion",
